--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,10 @@
 
 <body>
   <div class="gameContainer"></div>
+  <button id="reload" >Reload</button>
+
   <script src="./app.js"></script>
+ 
 </body>
 
 </html>
